[package]
name = "bitcoin-wallet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
bdk = { version = "^0.29", features = ["sqlite", "all-keys"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs"] }
axum = { version = "0.7", features = ["macros"] }
rusqlite = { version = "0.28", features = ["bundled"] }
